<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/firebase_lockup_400" />

    <TextView
        android:id="@+id/informationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/quickstart_message" />

    <Button
        android:id="@+id/btn_subscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_10"
        android:textAllCaps="false"
        android:text="@string/msg_subscribed" />

    <Button
        android:id="@+id/btn_log_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
        android:text="@string/log_token" />
    <Button
        android:id="@+id/btn_google_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
        android:text="@string/google_pay" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:textSize="@dimen/dp_28"
        android:gravity="center"
        android:text="@string/log_in_with"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btn_facebook_log"
            android:layout_width="@dimen/dp_120"
            android:layout_height="@dimen/dp_120"
            android:background="@mipmap/ic_login_facebook"/>
        <Button
            android:id="@+id/btn_phone_log"
            android:layout_width="@dimen/dp_120"
            android:layout_height="@dimen/dp_120"
            android:layout_marginLeft="@dimen/dp_60"
            android:background="@mipmap/ic_login_phone"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:textSize="@dimen/dp_28"
        android:gravity="center"
        android:text="@string/share_with"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btn_facebook_share"
            android:layout_width="@dimen/dp_120"
            android:layout_height="@dimen/dp_120"
            android:background="@mipmap/ic_invitation_facebook"/>
    </LinearLayout>


</LinearLayout>
